; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_cache.c_bfd_cache_close_all.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_cache.c_bfd_cache_close_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@bfd_last_cache = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bfd_cache_close_all() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @TRUE, align 4
  store i32 %2, i32* %1, align 4
  br label %3

3:                                                ; preds = %6, %0
  %4 = load i32*, i32** @bfd_last_cache, align 8
  %5 = icmp ne i32* %4, null
  br i1 %5, label %6, label %11

6:                                                ; preds = %3
  %7 = load i32*, i32** @bfd_last_cache, align 8
  %8 = call i32 @bfd_cache_close(i32* %7)
  %9 = load i32, i32* %1, align 4
  %10 = and i32 %9, %8
  store i32 %10, i32* %1, align 4
  br label %3

11:                                               ; preds = %3
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i32 @bfd_cache_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
